[gd_scene load_steps=10 format=3 uid="uid://bwmh7ufcadx5v"]

[ext_resource type="Script" path="res://ui/screen_main/scripts/main_top_bar.gd" id="1_8vd8r"]
[ext_resource type="Theme" uid="uid://wa3swx7ortc6" path="res://ui/screen_main/theming/main_top_bar.tres" id="1_d5ptb"]
[ext_resource type="Script" path="res://ui/screen_main/scripts/main_top_bar_window_title.gd" id="3_mgbmc"]
[ext_resource type="Texture2D" uid="uid://bdsvqibn5gh04" path="res://assets/icons/editor_icon.png" id="4_07ice"]
[ext_resource type="Texture2D" uid="uid://bk66k38osgv0o" path="res://assets/icons/minimize.png" id="6_vtbfy"]
[ext_resource type="Texture2D" uid="uid://cxdjexu1spc7o" path="res://assets/icons/maximize.png" id="7_7ncvm"]
[ext_resource type="Texture2D" uid="uid://c1yn05a2gyiiy" path="res://assets/icons/close.png" id="8_fak1p"]

[sub_resource type="LabelSettings" id="LabelSettings_b1s40"]
font_size = 14

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_jlnuy"]

[node name="TopBar" type="PanelContainer"]
custom_minimum_size = Vector2(0, 30)
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2
theme = ExtResource("1_d5ptb")
script = ExtResource("1_8vd8r")

[node name="WindowTitle" type="Label" parent="."]
layout_mode = 2
auto_translate = false
label_settings = SubResource("LabelSettings_b1s40")
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("3_mgbmc")

[node name="Margin" type="MarginContainer" parent="."]
layout_mode = 2
mouse_filter = 2

[node name="HBox" type="HBoxContainer" parent="Margin"]
layout_mode = 2
size_flags_vertical = 4
mouse_filter = 2
theme_override_constants/separation = 4

[node name="TopEditorButton" type="MenuButton" parent="Margin/HBox"]
unique_name_in_owner = true
custom_minimum_size = Vector2(26, 26)
layout_mode = 2
tooltip_text = "TOP_BAR_TOOLTIP_EDITOR_BUTTON"
icon = ExtResource("4_07ice")
icon_alignment = 1
expand_icon = true

[node name="TopMenuButtons" type="HBoxContainer" parent="Margin/HBox"]
unique_name_in_owner = true
layout_mode = 2

[node name="Spacer" type="VSeparator" parent="Margin/HBox"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_jlnuy")

[node name="MinimizeButton" type="Button" parent="Margin/HBox"]
custom_minimum_size = Vector2(26, 26)
layout_mode = 2
icon = ExtResource("6_vtbfy")
expand_icon = true

[node name="SwitchModeButton" type="Button" parent="Margin/HBox"]
custom_minimum_size = Vector2(26, 26)
layout_mode = 2
icon = ExtResource("7_7ncvm")
expand_icon = true

[node name="ExitButton" type="Button" parent="Margin/HBox"]
custom_minimum_size = Vector2(26, 26)
layout_mode = 2
icon = ExtResource("8_fak1p")
expand_icon = true

[connection signal="gui_input" from="." to="." method="_on_top_bar_dragging"]
[connection signal="pressed" from="Margin/HBox/MinimizeButton" to="." method="_on_minimize_button_pressed"]
[connection signal="pressed" from="Margin/HBox/SwitchModeButton" to="." method="_on_switch_mode_button_pressed"]
[connection signal="pressed" from="Margin/HBox/ExitButton" to="." method="_on_exit_button_pressed"]
